# GlOpt_User_tasks_DLL

./: CMakeLists.txt  ReadMe.txt
include/: GlOptUserTasks.h  Tasks.h
src/: GlOptUserTasks.cpp  Tasks.cpp  main.cpp
